<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vocalartist.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="37dp"
        android:layout_x="150dp"
        android:layout_y="32dp"
        android:text="@string/home" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_x="6dp"
        android:layout_y="138dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="76dp"
        android:layout_x="3dp"
        android:layout_y="168dp"
        android:autoLink="web"
        android:text="@string/url" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_x="5dp"
        android:layout_y="106dp"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_x="2dp"
        android:layout_y="78dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_x="176dp"
        android:layout_y="267dp"
        android:text="@string/likes" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_x="178dp"
        android:layout_y="323dp"
        android:text="@string/dislikes" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="181dp"
        android:layout_y="386dp"
        android:text="@string/social_networks" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="233dp"
        android:src="@drawable/abc_ab_bottom_solid_light_holo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_x="182dp"
        android:layout_y="355dp"
        android:text="@string/dob" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_x="213dp"
        android:layout_y="152dp"
        android:text="@string/wallpaper" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_x="213dp"
        android:layout_y="74dp"
        android:text="@string/songs" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_x="213dp"
        android:layout_y="113dp"
        android:text="@string/videos" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_x="213dp"
        android:layout_y="189dp"
        android:text="@string/mailing_list" />

</AbsoluteLayout>
